styles.css
body {
    font-family: 'Playfair Display', serif;
    background-color: #FAF9F6; /* Creamy neutral */
    color: #293241; 
    margin: 0;
    padding: 0;
    font-weight: 400;
  }
  
  header {
    background-color: #293241; 
    padding: 50px;
    text-align: center;
  }

  footer {
    background-color: #293241; 
    padding: 50px;
    text-align: center;
  }

  nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    gap: 50px;
    padding: 0;
    margin: 0;
    margin-top: 20px;
  }

  nav a {
    color:#FAF9F6;
    text-decoration: none;
    font-weight: 700;
  }

  nav a:hover {
    color: #F9B9C3;
  }
  
  header h1, footer h1 {
    font-family: 'Monsieur La Doulaise', cursive;
    color: #FAF9F6; /* Pink for an accent, can also use pure white (#FFF) for a cleaner look */
    margin: 0;
    font-size: 4 em;
    text-align: center;
  }

  footer p {
    font-family: 'Playfair Display', serif;
    color: #FAF9F6;
    font-size: 1 em;
    text-align: center;

  }
  
  main {
    max-width: 1200px;
    margin: auto;
    padding: 40px 20px; /* More padding for a luxurious feel */
  }

  h1, h2, h3 {
    color: #293241; 
    line-height: 1.2;
    margin-bottom: 20px;
    font-weight: 700;
    text-align: center;
  }
  
  a {
    color: #293241; 
    text-decoration: none;
  }

  a:hover {
    color: #F9B9C3; /* On hover, match headings for a cohesive feel */
  }

  b {
    color: #FAF9F6; 
    text-decoration: none;
    font-weight: 700;
    text-align: center;
  }

  b:hover {
    color: #F9B9C3; /* On hover, match headings for a cohesive feel */
  }

  section {
    margin-bottom: 40px; /* Space between sections */
    padding: 20px;
    background-color: #293241; 
    border-radius: 8px; /* Soft rounded corners */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
  }
   section h2 {
    color: #FAF9F6; 
    margin-bottom: 10px;
  }
   section p {
    color: #FAF9F6; 
    line-height: 1.6; /* Improve readability */
    text-align: center;
  }
 
  nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    gap: 50px;
    padding: 0;
    margin: 0;
    margin-top: 20px;
  }

  nav a {
    color:#FAF9F6;
    text-decoration: none;
    font-weight: 700;
  }

  nav a:hover {
    color: #F9B9C3;
  }

 

